--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,21 @@
 
         <!-- add babe.css here if you are using babe styles -->
         <link type="text/css" href="node_modules/babe-project/babe.css" rel="stylesheet" />
-        <link type="text/css" href="custom_styles.css" rel="stylesheet" />
 
         <!-- add js dependencies here -->
         <!-- for example jQuery and csv-js if you are using babe.js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js"></script> 
+        <script src="node_modules/lodash/lodash.js"></script> 
 
         <!-- add babe.full.js or babe.js here -->
         <script src="node_modules/babe-project/babe.full.js"></script>
 
         <!-- load local files -->
-        <script src="trials.js"></script>
-        <script src="custom_views.js"></script>
-        <script src="views.js"></script>
-        <script src="main.js"></script>
+        <link type="text/css" href="01_custom_styles.css" rel="stylesheet" />
+        <script src="02_custom_functions.js"></script>
+	    <script src="03_custom_views_templates.js"></script>
+        <script src="04_trials.js"></script>
+        <script src="05_views.js"></script>
+        <script src="06_main.js"></script>
     </head>
 
     <body>
